@@ -4,9 +4,7 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 
 public class ProductsPage extends BasePage {
-
-    public static final String ADD_TO_CART_PATTERN =
-            "//div[text()='%s']//ancestor::div[@class='inventory_item']//child::button[text()='Add to cart']";
+    public static final String ADD_TO_CART_PATTERN = "//div[text()='%s']//ancestor::div[@class='inventory_item']//button";
     private final By titlePage = By.cssSelector(DATA_TEST_PATTERN.formatted("title"));
     private final By addToCartBtn = By.xpath("//*[text()='Add to cart']");
     private final By cartBadge = By.cssSelector(DATA_TEST_PATTERN.formatted("shopping-cart-badge"));
@@ -24,7 +22,7 @@ public class ProductsPage extends BasePage {
     }
 
     public void addToCart() {
-        driver.findElements(addToCartBtn).get(0).click();
+        driver.findElements(addToCartBtn).getFirst().click();
     }
 
     public void addToCart(final String goodsName) {
@@ -38,5 +36,9 @@ public class ProductsPage extends BasePage {
 
     public String checkCounterColor() {
         return driver.findElement(cartBadge).getCssValue("background-color");
+    }
+
+    public String checkBtnName(final String goodsName) {
+        return driver.findElement(By.xpath(ADD_TO_CART_PATTERN.formatted(goodsName))).getText();
     }
 }
